# openclaw-cluster

./: .gitignore
openclaw-cluster/: .coverage  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
openclaw-cluster/.github/workflows/: ci.yml
openclaw-cluster/.pytest_cache/v/cache/: lastfailed  nodeids
openclaw-cluster/common/: __init__.py  config.py  http_client.py  logging.py  models.py
openclaw-cluster/communication/: __init__.py  messages.py  nats_client.py  task_messaging.py
openclaw-cluster/config/: coordinator.yaml.example  worker.yaml.example
openclaw-cluster/coordinator/: __init__.py  api.py  coordinator_service.py  heartbeat_monitor.py  main.py  node_service.py
openclaw-cluster/data/: cluster.db-shm  cluster.db-wal  scheduler_test.db
openclaw-cluster/docs/: DEPLOYMENT.md  MULTI_MACHINE_DEV.md  NODE_MANAGEMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  STORAGE.md  STORAGE_SUMMARY.md  test-report.md  week1-progress.md  week2-progress.md  week3-progress.md  week4-progress.md  week5-progress.md  week6-progress.md
openclaw-cluster/examples/: node_management_demo.py  storage_demo.py
openclaw-cluster/scheduler/: task_executor.py  task_queue.py  task_scheduler.py
openclaw-cluster/scripts/: quick_start.sh  start.sh  start_coordinator.py  start_worker.py  stop.sh
openclaw-cluster/skills/: athena-dynamic-prompt  athena-legal-intelligence  athena-legal-world-model  athena-patent-downloader  athena-patent-retrieval  athena-scenario-planner  find-skills  himalaya  openai-whisper  skill_discovery.py  skill_registry.py  video-frames  wechat-mp-publisher  wechat-publisher
openclaw-cluster/skills/comfyui-text2image/: SKILL.md  __init__.py  comfyui_client.py  skill.json  test.py
openclaw-cluster/storage/: __init__.py  database.py  repositories.py  state_manager.py
openclaw-cluster/tests/: test_basic.py  test_integration.py  test_node_management_integration.py  test_storage.py  verify_full_system.py  verify_node_management.py  verify_nodes_simple.py  verify_storage.py  verify_task_scheduling.py  verify_week5_integration.py
openclaw-cluster/worker/: __init__.py  heartbeat.py  main.py  worker_service.py
